# raverie-engine

./: .clang-format  .clang-tidy  .dockerignore  .eslintrc.js  .eslintrc.json  .gitignore  .gitmodules  .hgignore  .travis.yml  CMakeLists.txt  CreateBuild.py  Dockerfile  GenerateVS2015.cmd  GenerateVS2015WithUnitTests.cmd  GenerateVS2015WithUnitTests_LLVM-vs2014.cmd  GenerateVS2015_LLVM-vs2014.cmd  LICENSE.md  License.txt  OpenEditorWithMemoryDebugger.cmd  Paths.props  README.md  Zero.sln  build.sh  dockerbuild.sh  dockerbuildserver.sh  index.js  index.ts  package-lock.json  package.json  projectUpgrade.ts  run.sh  setup.bat  suppress.txt  tsconfig.json  weld.sh
Code/Renderer/: CMakeLists.txt
Extensions/: CMakeLists.txt
Extensions/CodeTranslator/: CMakeLists.txt  CodeSplitWindow.cpp  CodeSplitWindow.hpp  CodeTranslator.vcxproj  CodeTranslator.vcxproj.filters  CodeTranslatorCommands.cpp  CodeTranslatorCommands.hpp  Generated.cmake  Precompiled.hpp  ShaderTranslationDebugHelper.cpp  ShaderTranslationDebugHelper.hpp
Extensions/Editor/: AddRemoveListBox.hpp  AddWindow.cpp  AddWindow.hpp  AllCommands.hpp  AnimationEditor.cpp  AnimationEditor.hpp  AnimationEditorData.cpp  AnimationEditorData.hpp  AnimationGraph.cpp  AnimationGraph.hpp  AnimationScrubber.cpp  AnimationScrubber.hpp  AnimationSettings.cpp  AnimationSettings.hpp  AnimationTrackView.cpp  AnimationTrackView.hpp  AppCommands.cpp  ArchiveProjectCommands.cpp  BackgroundTask.cpp  BackgroundTask.hpp  BackgroundTaskUi.cpp  BasicGizmos.cpp  BasicGizmos.hpp  BroadPhaseEditor.hpp  BugReport.cpp  BugReport.hpp  CMakeLists.txt  ClothTools.cpp  ClothTools.hpp  CogCommand.cpp  CogCommand.hpp  CollisionTableEditor.cpp  CollisionTableEditor.hpp  ColorGradientEditor.cpp  ColorGradientEditor.hpp  ColorPicker.cpp  ColorPicker.hpp  ColorScheme.cpp  ColorScheme.hpp  CommandSelector.cpp  (+174 more)
Extensions/Gameplay/: CMakeLists.txt  CameraViewport.cpp  CameraViewport.hpp  DefaultGame.cpp  DefaultGame.hpp  EmscriptenExportTarget.cpp  Exporter.cpp  Exporter.hpp  Gameplay.vcxproj  Gameplay.vcxproj.filters  GameplayStandard.cpp  GameplayStandard.hpp  Generated.cmake  Importer.cpp  Importer.hpp  IndexedHalfEdgeMesh.cpp  IndexedHalfEdgeMesh.hpp  MarchingCubes.cpp  MarchingCubes.hpp  MarchingSquares.cpp  MarketWidget.cpp  MarketWidget.hpp  MouseCapture.cpp  MouseCapture.hpp  Orientation.hpp  PathFinder.cpp  PathFinder.hpp  PathFinderGrid.cpp  PathFinderGrid.hpp  PathFinderMesh.cpp  PathFinderMesh.hpp  PlayGame.cpp  Precompiled.hpp  QuickHull3DBindings.cpp  QuickHull3DBindings.hpp  RandomContext.cpp  RandomContext.hpp  Reactive.cpp  Reactive.hpp  ReactiveViewport.cpp  (+19 more)
Extensions/RayTracer/: CMakeLists.txt  Generated.cmake  Precompiled.cpp  Precompiled.hpp  RayTraceInitialize.cpp  RayTraceInitialize.hpp  RayTraceProperties.cpp  RayTraceProperties.hpp  RayTracedGraphicsProvider.cpp  RayTracedGraphicsProvider.hpp  RayTracedPhysicsProvider.cpp  RayTracedPhysicsProvider.hpp  RayTracedRenderer.cpp  RayTracedRenderer.hpp  RayTracer.cpp  RayTracer.hpp  RayTracer.vcxproj  RayTracer.vcxproj.filters
Extensions/Scintilla/: CMakeLists.txt  Generated.cmake
Extensions/SpirV/: CMakeLists.txt  SpirVTools.props
Extensions/UiWidget/: CMakeLists.txt  Generated.cmake  Precompiled.cpp  Precompiled.hpp  UiDockLayout.cpp  UiDockLayout.hpp  UiFillLayout.cpp  UiFillLayout.hpp  UiLayout.cpp  UiLayout.hpp  UiRect.cpp  UiRect.hpp  UiRenderer.cpp  UiRenderer.hpp  UiRootInputRouter.cpp  UiRootInputRouter.hpp  UiRootWidget.cpp  UiRootWidget.hpp  UiStackLayout.cpp  UiStackLayout.hpp  UiWidget.cpp  UiWidget.hpp  UiWidget.vcxproj  UiWidget.vcxproj.filters  UiWidgetEvents.cpp  UiWidgetEvents.hpp  UiWidgetStandard.cpp  UiWidgetStandard.hpp
Extensions/Widget/: Button.cpp  Button.hpp  CMakeLists.txt  CheckBox.cpp  CheckBox.hpp  Command.cpp  Command.hpp  CommandBinding.cpp  CommandBinding.hpp  Composite.cpp  Composite.hpp  Constants.cpp  Constants.hpp  ContextMenu.cpp  ContextMenu.hpp  Controls.cpp  Controls.hpp  EditText.cpp  EditText.hpp  Events.cpp  Events.hpp  Generated.cmake  ImageWidget.cpp  ImageWidget.hpp  Layout.cpp  Layout.hpp  ListControls.cpp  ListControls.hpp  MainWindow.cpp  MainWindow.hpp  Manipulator.cpp  Manipulator.hpp  Modal.cpp  Modal.hpp  MultiDock.cpp  MultiDock.hpp  MultiManager.cpp  MultiManager.hpp  PopUp.cpp  PopUp.hpp  (+39 more)
Extensions/ZilchShaders/: ArithmeticInstructions.cpp  BaseShaderIRTranslator.hpp  BaseShaderTranslator.hpp  BitInstructions.cpp  CMakeLists.txt  CodeRangeMapping.cpp  CodeRangeMapping.hpp  CommonInstructions.hpp  Compositor.cpp  Compositor.hpp  ConversionInstructions.cpp  EntryPointGeneration.cpp  EntryPointGeneration.hpp  ExtensionLibrary.cpp  ExtensionLibrary.hpp  FixedArray.cpp  ForwardDeclarations.hpp  Generated.cmake  GenericTranslation.cpp  GenericTranslation.hpp  Glsl450Extensions.cpp  GlslTranslation.cpp  GlslTranslation.hpp  GlslTranslator.cpp  GlslTranslator.hpp  HlslTranslator.cpp  HlslTranslator.hpp  LibraryTranslationHelpers.cpp  LibraryTranslationHelpers.hpp  LibraryTranslator.cpp  LibraryTranslator.hpp  LogicalInstructions.cpp  OperatorKeys.cpp  OperatorKeys.hpp  Precompiled.cpp  Precompiled.hpp  ShaderAttributes.cpp  ShaderAttributes.hpp  ShaderByteStream.cpp  ShaderByteStream.hpp  (+70 more)
Libraries/: CMakeLists.txt
Libraries/Assimp/: CMakeLists.txt  Precompiled.hpp  revision.h
Libraries/BrowserSubProcess/: CMakeLists.txt  Main.cpp  Precompiled.hpp
Libraries/CodeTranslator/: CMakeLists.txt  CodeSplitWindow.cpp  CodeSplitWindow.hpp  CodeTranslatorCommands.cpp  CodeTranslatorCommands.hpp  CodeTranslatorStandard.hpp  Precompiled.cpp  Precompiled.hpp  ShaderTranslationDebugHelper.cpp  ShaderTranslationDebugHelper.hpp
Libraries/Common/: Algorithm.hpp  Allocator.hpp  Array.hpp  ArrayMap.hpp  ArraySet.hpp  Atomic.hpp  Audio.hpp  BasicNativeTypes.inl  BasicNativeTypesMath.inl  BitField.hpp  BitMath.hpp  BitStream.cpp  BitStream.hpp  BitStream.inl  BitTypes.hpp  (+244 more)
Projects/: CMakeLists.txt
Systems/: CMakeLists.txt  Systems.txt
UnitTests/: .hgignore  CMakeLists.txt  Paths.props  UnitTests.sln
ZeroLibraries/: .hgignore  CMakeLists.txt
(+8915 files in other folders)
